# cmake-automation-example

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  init.sh  watch.sh
src/: hello.cpp  hello.hpp  test_hello.cpp
